// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav items 1`] = `
<DocumentFragment>
  <nav
    class="root"
  >
    <div
      class="mobileToggle"
    >
      <button />
    </div>
    <div
      class="itemsContainer"
    >
      <div
        class="container"
      >
        <ul
          class="ul"
        >
          <li
            class="li"
          >
            Главная
          </li>
        </ul>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav mobile close on item click 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,18 +6,12 @@
        class=\\"mobileToggle\\"
      >
        <button />
      </div>
      <div
-       class=\\"itemsContainer itemsContainerShow\\"
-     >
-       <div
-         class=\\"closeButtonContainer\\"
+       class=\\"itemsContainer\\"
      >
-         <button />
-          
-       </div>
        <div
          class=\\"container\\"
        >
          <ul
            class=\\"ul\\""
`;

exports[`Nav mobile open on humburger click 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,12 +6,18 @@
        class=\\"mobileToggle\\"
      >
        <button />
      </div>
      <div
-       class=\\"itemsContainer\\"
+       class=\\"itemsContainer itemsContainerShow\\"
+     >
+       <div
+         class=\\"closeButtonContainer\\"
        >
+         <button />
+          
+       </div>
        <div
          class=\\"container\\"
        >
          <ul
            class=\\"ul\\""
`;
